--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -93,13 +93,13 @@ echo $this->formelementerrors ( $con_estado );
 					<td colspan="3"><h3 align="left">Informaci&oacute;n Personal</h3><hr /></td>
 				</tr>
 				<tr>
-					<td>
+					<td width="33%">
 					<?php echo $formLabel->openTag() . $con_tip_per_es->getLabel() . $formLabel->closeTag();
 					      echo html_entity_decode( $this->formtext ( $con_tip_per_es ) );
 						  echo html_entity_decode( $this->formelementerrors ( $con_tip_per_es ) ); 
 					?>
 					</td>
-					<td>
+					<td width="33%">
 					<?php echo $formLabel->openTag() . $con_tip_per_en->getLabel() . $formLabel->closeTag();
 					      echo html_entity_decode( $this->formtext ( $con_tip_per_en ) );
 						  echo html_entity_decode( $this->formelementerrors ( $con_tip_per_en ) ); 
@@ -122,9 +122,12 @@ echo $this->formelementerrors ( $con_estado );
 					</td>	
 					<td>
 					<?php echo $formLabel->openTag() . $emp_id->getLabel() . $formLabel->closeTag();
+					echo '<br />';
 					      echo html_entity_decode( $this->formselect ( $emp_id ) );
 						  echo html_entity_decode( $this->formelementerrors ( $emp_id ) );
 					?>
+					<div style="float: left; padding-top: 5px;">&nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'empresas', 'action' => 'add'))?>"><img src="<?php echo $this->basepath() . '/img/gif/plus.gif'?>" /></a></div>
+					
 					</td>	
 					<td>
 					<?php echo $formLabel->openTag() . $suc_id->getLabel() . $formLabel->closeTag();
