--- a/module/Cartas/view/cartas/recepcion/pdf.phtml
+++ b/module/Cartas/view/cartas/recepcion/pdf.phtml
@@ -46,7 +46,7 @@
     	</tr>
     	<tr>
     		<td class="title">Due Date <br/> mm/dd/yyy</td>
-    		<td><?php echo $this->fe_recepcion->getFe_rec_fecha_mes() . '/' . $this->fe_recepcion->getFe_rec_fecha_dia() . '/' . $this->fe_recepcion->getFe_rec_fecha_anio()?></td>
+    		<td><?php echo $this->fe_recepcion->getFe_rec_fecha();//echo $this->fe_recepcion->getFe_rec_fecha_mes() . '/' . $this->fe_recepcion->getFe_rec_fecha_dia() . '/' . $this->fe_recepcion->getFe_rec_fecha_anio()?></td>
     	</tr>
     	<tr>
     		<td class="title">Due Time</td>
