--- a/module/Cartas/view/cartas/cartas/cartainformal.phtml
+++ b/module/Cartas/view/cartas/cartas/cartainformal.phtml
@@ -27,7 +27,7 @@ $idioma = $this->carta->getCtr_idioma();
 <table cellspacing="0" cellpadding="10" border="0" width="70%" align="center">
     <tr>
         <td colspan="2">
-        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->carta->getCtr_fecha_creacion(), $this->carta->getCtr_idioma(), 'd-M-Y')?></div>
+        	<div>Quito D.M, <?php echo $funciones->translateAndFormatDate($this->carta->getCtr_fecha_creacion(), $this->carta->getCtr_idioma(), 'd/m/Y')?></div>
         	<div><?php echo $this->carta->getCtr_codigo_final()?></div>
         </td>
     </tr>
