--- a/module/Cartas/view/cartas/cartas/cartasueldo.phtml
+++ b/module/Cartas/view/cartas/cartas/cartasueldo.phtml
@@ -119,10 +119,10 @@ echo $this->doctype(); $idioma = $this->carta->getCtr_idioma();?>
     	<td>
     		<table>
     			<tr>
-    				<td style="text-transform: capitalize;"><?php echo $firma->getEpl_nombre() . ' ' . $firma->getEpl_apellido() ?></td>
+    				<td style="text-transform: capitalize;"><?php echo $firma->getCar_fir_nombre() ?></td>
     			</tr>
     			<tr>
-    				<td><?php echo $firma->getEpl_cargo()?></td>
+    				<td><?php echo $firma->getCar_fir_cargo()?></td>
     			</tr>
     		</table>
     	</td>
