--- a/module/Cartas/view/cartas/cartas/cartafax.phtml
+++ b/module/Cartas/view/cartas/cartas/cartafax.phtml
@@ -61,7 +61,7 @@ echo $this->doctype(); $idioma = $this->carta->getCtr_idioma();?>
     			if( $principal == 'P'):
     			?>
     				<tr>
-    					<td align="right"><?php echo $firma_from->getEpl_nombre() . ' ' . $firma_from->getEpl_apellido() ?> <br /><?php echo $firma_from->getEpl_cargo()?></td>
+    					<td align="right"><?php echo $firma_from->getCar_fir_nombre() ?> <br /><?php echo $firma_from->getCar_fir_cargo()?></td>
     				</tr>
     				<tr>
     					<td align="right"><?php echo $this->empresa_interna->getEmp_int_direccion()?></td>
@@ -99,10 +99,10 @@ echo $this->doctype(); $idioma = $this->carta->getCtr_idioma();?>
 	    	<td>
 	    		<table>
 	    			<tr>
-	    				<td style="text-transform: capitalize;"><?php echo $firma->getEpl_nombre() . ' ' . $firma->getEpl_apellido() ?></td>
+	    				<td style="text-transform: capitalize;"><?php echo $firma->getCar_fir_nombre() ?></td>
 	    			</tr>
 	    			<tr>
-	    				<td><?php echo $firma->getEpl_cargo()?></td>
+	    				<td><?php echo $firma->getCar_fir_cargo()?></td>
 	    			</tr>
 	    		</table>
 	    	</td>
