--- a/module/Cartas/view/cartas/cartas/ingresar.phtml
+++ b/module/Cartas/view/cartas/cartas/ingresar.phtml
@@ -9,6 +9,7 @@ $form->setAttribute ( 'action', $this->url ( 'cartas', array (
 ) ) )->setAttribute ( 'method', 'post' );
 $formLabel = $this->plugin ( 'formLabel' );
 
+$direccion_empresa_oculto = $form->get ( 'direccion_empresa_oculto' );
 $ctr_id = $form->get ( 'CTR_ID' );
 $emp_int_id = $form->get ( 'EMP_INT_ID' );
 $pro_id = $form->get ( 'PRO_ID' );
@@ -38,6 +39,8 @@ $proyecto_oculto = $form->get ( 'proyecto_oculto' );
 //$proyecto_oculto = $form->get ( 'proyecto_oculto' );
 $car_fir_tipo = $form->get ( 'CAR_FIR_TIPO' );
 $ctr_activar_direccion = $form->get ( 'CTR_ACTIVAR_DIRECCION' );
+$ctr_direccion_empresa = $form->get ( 'CTR_DIRECCION_EMPRESA' );
+
 
 //CAMPOS PARA TIPO DE CARTA TRANSFERENCIA DE SUELDOS
 $tra_sue_valor_debito = $form->get ( 'TRA_SUE_VALOR_DEBITO' );
@@ -80,6 +83,9 @@ echo $this->formelementerrors ( $ctr_tipo );
 echo $this->formhidden ( $ctr_estado );
 echo $this->formelementerrors ( $ctr_estado );
 
+echo $this->formhidden ( $direccion_empresa_oculto );
+echo $this->formelementerrors ( $direccion_empresa_oculto );
+
 echo $this->formhidden ( $contacto_oculto );
 echo $this->formelementerrors ( $contacto_oculto );
 
@@ -92,6 +98,8 @@ echo $this->formelementerrors ( $empresa_oculto );
 
 echo $this->formhidden ( $proyecto_oculto );
 echo $this->formelementerrors ( $proyecto_oculto );
+
+
 ?>
 <ul class="error_container bs-callout bs-callout-danger">
 
@@ -196,7 +204,7 @@ echo $this->formelementerrors ( $proyecto_oculto );
 				<tr>
 					<td>
 					<?php echo $formLabel->openTag() . $epl_id_uno->getLabel() . $formLabel->closeTag();
-					      echo html_entity_decode( $this->formselect ( $epl_id_uno ) );
+					      echo html_entity_decode( $this->formtext ( $epl_id_uno ) );
 						  echo html_entity_decode( $this->formelementerrors ( $epl_id_uno ) );
 					?>
 					</td>
@@ -216,7 +224,7 @@ echo $this->formelementerrors ( $proyecto_oculto );
 				<tr>
 					<td>
 					<?php echo $formLabel->openTag() . $epl_id_dos->getLabel() . $formLabel->closeTag();
-					      echo html_entity_decode( $this->formselect ( $epl_id_dos ) );
+					      echo html_entity_decode( $this->formtext ( $epl_id_dos ) );
 						  echo html_entity_decode( $this->formelementerrors ( $epl_id_dos ) );
 					?>
 					</td>
@@ -226,7 +234,7 @@ echo $this->formelementerrors ( $proyecto_oculto );
 						  echo html_entity_decode( $this->formelementerrors ( $cargo_dos ) );
 					?>
 					</td>
-					<td>&nbsp;</td>		
+					<td>&nbsp;</td>	
 				</tr>
 				<tr>
 					<td>
@@ -235,20 +243,27 @@ echo $this->formelementerrors ( $proyecto_oculto );
 						  echo html_entity_decode( $this->formelementerrors ( $ctr_activar_direccion ) );
 					?>
 					</td>
+					<td id="direccion_empresa_m" style="display: none;">
+					<?php echo $formLabel->openTag() . $ctr_direccion_empresa->getLabel() . $formLabel->closeTag();
+					      echo html_entity_decode( $this->formselect ( $ctr_direccion_empresa ) );
+						  echo html_entity_decode( $this->formelementerrors ( $ctr_direccion_empresa ) );
+					?>
+					</td>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td>
 					<?php echo $formLabel->openTag() . $ctr_fecha_creacion->getLabel() . $formLabel->closeTag();
 					      echo html_entity_decode( $this->formtext ( $ctr_fecha_creacion ) );
 						  echo html_entity_decode( $this->formelementerrors ( $ctr_fecha_creacion ) );
 					?>
-					</td>	
+					</td>
 					<td>
 					<?php echo $formLabel->openTag() . $ctr_codigo_final->getLabel() . $formLabel->closeTag();
 					      echo html_entity_decode( $this->formtext ( $ctr_codigo_final ) );
 						  echo html_entity_decode( $this->formelementerrors ( $ctr_codigo_final ) );
 					?>
 					</td>
-					
-					
 				</tr>
 				<tr>
 					<td colspan="3" ><br /><hr /></td>
@@ -419,10 +434,33 @@ echo $this->formelementerrors ( $proyecto_oculto );
 	                }
 	                $("#CON_ID").prop("disabled", false);
 	            });
+
+
+		          //TRAE TODAS LAS DIRECCIONES DE LAS SUCURSALES DE UNA EMPRESA
+	            $.ajax({
+	                url: "<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'sucursaldireccion')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: "empresa=" + $('#EMP_ID').val(),
+	                beforeSend: function() {
+	                	 $("#CTR_DIRECCION_EMPRESA").html("");
+	                	 $("#CTR_DIRECCION_EMPRESA").append('<option>Procesando, espere por favor...</option>');
+	                }
+	            }).done(function(contactos) {
+	                $("#CTR_DIRECCION_EMPRESA").html("");
+	                $("#CTR_DIRECCION_EMPRESA").append('<option value = "">-- Seleccione una direccion --</option>');
+	                var selected = '';
+	                for (contacto in contactos) {
+	                    $("#CTR_DIRECCION_EMPRESA").append('<option value="' + contacto + '">' + contactos[contacto] + '</option>');
+	                }
+	                $("#CTR_DIRECCION_EMPRESA").prop("disabled", false);
+	            });
+	            
 			}else{
 				//$("#CON_ID").prop("disabled", true);
 			}
         });
+
 
 		$("#EMP_ID").change(function() {
 			if($('#EMP_ID').val() != '' && $('#EMP_ID').val() != null){
@@ -444,8 +482,29 @@ echo $this->formelementerrors ( $proyecto_oculto );
 	                }
 	                $("#CON_ID").prop("disabled", false);
 	            });
+				//DIRECCION DE EMPRESA
+	            $.ajax({
+	                url: "<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'empresadireccion')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: "empresa=" + $('#EMP_ID').val(),
+	                beforeSend: function() {
+	                	 $("#CTR_DIRECCION_EMPRESA").html("");
+	                	 $("#CTR_DIRECCION_EMPRESA").append('<option>Procesando, espere por favor...</option>');
+	                }
+	            }).done(function(contactos) {
+	                $("#CTR_DIRECCION_EMPRESA").html("");
+	                $("#CTR_DIRECCION_EMPRESA").append('<option value = "">-- Seleccione una direccion --</option>');
+	                var selected = '';
+	                for (contacto in contactos) {
+	                    $("#CTR_DIRECCION_EMPRESA").append('<option value="' + contacto + '">' + contactos[contacto] + '</option>');
+	                }
+	                $("#CTR_DIRECCION_EMPRESA").prop("disabled", false);
+	            });
+
+	            
 			}else{
-				$("#CON_ID").prop("disabled", true);
+				$("#CON_ID, #CTR_DIRECCION_EMPRESA").prop("disabled", true);
 			}
         });
 
@@ -476,11 +535,12 @@ echo $this->formelementerrors ( $proyecto_oculto );
 	                }
 	                $("#CON_ID").prop("disabled", false);
 	            });
+
 			}else{
 				$("#CON_ID").prop("disabled", true);
 			}
         });
-
+/*
 		$("#EPL_ID_UNO").change(function() {
 			traerCargo('EPL_ID_UNO', $("#EPL_ID_UNO").val(), 'CARGO_UNO');
 		});
@@ -496,7 +556,7 @@ echo $this->formelementerrors ( $proyecto_oculto );
 		$("#EPL_ID_DOS").ready(function() {
 			traerCargo('EPL_ID_DOS', $("#EPL_ID_DOS").val(), 'CARGO_DOS');
 		});
-		
+		*/
         function traerCargo(id, val, cargo){
         	//FUNCION PARA TRAER EL CARGO DE UN EMPLEADO
     		
@@ -560,6 +620,88 @@ echo $this->formelementerrors ( $proyecto_oculto );
 	            }).done(function(cargobdd) {
 	            		$("#CTR_REFERENCIA").val(" " + cargobdd["pro_id"] + ', ' + cargobdd["pro_descripcion"]);
 	            });
+			}
+        });
+
+		$("#CTR_ACTIVAR_DIRECCION").change(function() {
+			if($('#CTR_ACTIVAR_DIRECCION').val() == 'E'){
+				$('#direccion_empresa_m').attr('style','display:true');
+			}else{
+				$('#direccion_empresa_m').attr('style','display:none');
+			}
+		});
+
+		$("#CTR_ACTIVAR_DIRECCION").ready(function() {
+			if($('#CTR_ACTIVAR_DIRECCION').val() == 'E'){
+				$('#direccion_empresa_m').attr('style','display:true');
+			}else{
+				$('#direccion_empresa_m').attr('style','display:none');
+			}
+		});
+
+
+		//FUNCION PARA CARGAR EL COMBO BOX DE CIUDADES EN BASE A UN ESTADO
+		$("#SUC_ID").ready(function() {
+			if($('#SUC_ID').val() != '' && $('#SUC_ID').val() != null){
+
+	            if($('#empresa_oculto').val() != '' && $('#empresa_oculto').val() != null){
+	            	if($('#sucursal_oculto').val() != '' && $('#sucursal_oculto').val() != null){
+	            		 //TRAE TODAS LAS DIRECCIONES DE LAS SUCURSALES DE UNA EMPRESA
+	    	            $.ajax({
+	    	                url: "<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'sucursaldireccion')) ?>",
+	    	                type: "POST",
+	    	                dataType: "json",
+	    	                data: "empresa=" + $('#EMP_ID').val(),
+	    	                beforeSend: function() {
+	    	                	 $("#CTR_DIRECCION_EMPRESA").html("");
+	    	                	 $("#CTR_DIRECCION_EMPRESA").append('<option>Procesando, espere por favor...</option>');
+	    	                }
+	    	            }).done(function(contactos) {
+	    	                $("#CTR_DIRECCION_EMPRESA").html("");
+	    	                $("#CTR_DIRECCION_EMPRESA").append('<option value = "">-- Seleccione una direccion --</option>');
+	    	                var selected = '';
+	    	                for (contacto in contactos) {
+
+								if($('#direccion_empresa_oculto').val() == contacto){
+									selected = 'selected="selected"';
+								}else{
+									selected = ''
+								}
+		    	                
+	    	                    $("#CTR_DIRECCION_EMPRESA").append('<option value="' + contacto + '" '+selected+'>' + contactos[contacto] + '</option>');
+	    	                }
+	    	                $("#CTR_DIRECCION_EMPRESA").prop("disabled", false);
+	    	            });
+		            }else{
+		            	//DIRECCION DE EMPRESA
+			            $.ajax({
+			                url: "<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'empresadireccion')) ?>",
+			                type: "POST",
+			                dataType: "json",
+			                data: "empresa=" + $('#EMP_ID').val(),
+			                beforeSend: function() {
+			                	 $("#CTR_DIRECCION_EMPRESA").html("");
+			                	 $("#CTR_DIRECCION_EMPRESA").append('<option>Procesando, espere por favor...</option>');
+			                }
+			            }).done(function(contactos) {
+			                $("#CTR_DIRECCION_EMPRESA").html("");
+			                $("#CTR_DIRECCION_EMPRESA").append('<option value = "">-- Seleccione una direccion --</option>');
+			                var selected = '';
+			                for (contacto in contactos) {
+			                	if($('#direccion_empresa_oculto').val() == contacto){
+									selected = 'selected="selected"';
+								}else{
+									selected = ''
+								}
+			                    $("#CTR_DIRECCION_EMPRESA").append('<option value="' + contacto + '" '+selected+'>' + contactos[contacto] + '</option>');
+			                }
+			                $("#CTR_DIRECCION_EMPRESA").prop("disabled", false);
+			            });
+			        }
+	            }
+	            
+			}else{
+				//$("#CON_ID").prop("disabled", true);
 			}
         });
 
