--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -439,6 +439,87 @@ echo $this->formelementerrors ( $con_estado );
 		});
         */
 
+		$('#SUC_ID').change(function(){
+			if($('#SUC_ID').val() != null && $('#SUC_ID').val() != ''){
+
+				$.ajax({
+	                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'datosEmpresa')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: "empresa=" + $('#SUC_ID').val(),
+	                beforeSend: function() {
+						$('#SUC_DIRECCION, #SUC_EMAIL, #SUC_PAGINA_WEB').val('Procesando, espere por favor...');
+	                }
+	            }).done(function(empresa) {
+		            $('#datos_sucursal').attr('style', 'display:true');
+	            	$("#SUC_DIRECCION").val(''+empresa['emp_direccion']);
+	            	$("#SUC_EMAIL").val(''+empresa['emp_email']);
+	            	$("#SUC_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
+
+	            	$.ajax({
+		                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'telefonoEmpresa')) ?>",
+		                type: "POST",
+		                dataType: "json",
+		                data: "empresa=" + empresa['emp_id'],
+		                beforeSend: function() {
+							//$('#EMP_DIRECCION, #EMP_EMAIL, #EMP_PAGINA_WEB').val('Procesando, espere por favor...');
+		                }
+		            }).done(function(empresa) {
+		            	var i = 0; 
+						for(i=0; i<5; i++){
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[TIP_TEL_ID\\]").val('1');
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[DET_CON_VALOR\\]").val('' + empresa['det_con_valor']);
+						}
+						
+		            }); 
+	            	
+	            });
+			}else{
+				$('#datos_sucursal').attr('style', 'display:none');
+			}
+		});
+
+		$('#SUC_ID').ready(function(){
+			if($('#SUC_ID').val() != null && $('#SUC_ID').val() != ''){
+
+				$.ajax({
+	                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'datosEmpresa')) ?>",
+	                type: "POST",
+	                dataType: "json",
+	                data: "empresa=" + $('#sucursal_oculto').val(),
+	                beforeSend: function() {
+						$('#SUC_DIRECCION, #SUC_EMAIL, #SUC_PAGINA_WEB').val('Procesando, espere por favor...');
+	                }
+	            }).done(function(empresa) {
+		            $('#datos_sucursal').attr('style', 'display:true');
+	            	$("#SUC_DIRECCION").val(''+empresa['emp_direccion']);
+	            	$("#SUC_EMAIL").val(''+empresa['emp_email']);
+	            	$("#SUC_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
+
+	            	$.ajax({
+		                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'telefonoEmpresa')) ?>",
+		                type: "POST",
+		                dataType: "json",
+		                data: "empresa=" + empresa['emp_id'],
+		                beforeSend: function() {
+							//$('#EMP_DIRECCION, #EMP_EMAIL, #EMP_PAGINA_WEB').val('Procesando, espere por favor...');
+		                }
+		            }).done(function(empresa) {
+		            	var i = 0; 
+						for(i=0; i<5; i++){
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[TIP_TEL_ID\\]").val('1');
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[DET_CON_VALOR\\]").val('' + empresa['det_con_valor']);
+						}
+						
+		            }); 
+		            
+		            
+	            });
+			}else{
+				$('#datos_sucursal').attr('style', 'display:none');
+			}
+		});
+
 		$('#EMP_ID').change(function(){
 			if($('#EMP_ID').val() != null && $('#EMP_ID').val() != ''){
 
@@ -455,7 +536,27 @@ echo $this->formelementerrors ( $con_estado );
 	            	$("#EMP_DIRECCION").val(''+empresa['emp_direccion']);
 	            	$("#EMP_EMAIL").val(''+empresa['emp_email']);
 	            	$("#EMP_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
+
+	            	$.ajax({
+		                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'telefonoEmpresa')) ?>",
+		                type: "POST",
+		                dataType: "json",
+		                data: "empresa=" + empresa['emp_id'],
+		                beforeSend: function() {
+							//$('#EMP_DIRECCION, #EMP_EMAIL, #EMP_PAGINA_WEB').val('Procesando, espere por favor...');
+		                }
+		            }).done(function(empresa) {
+		            	var i = 0; 
+						for(i=0; i<5; i++){
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[TIP_TEL_ID\\]").val('1');
+							$("#DETALLE_CONTACTO\\["+i+"\\]\\[DET_CON_VALOR\\]").val('' + empresa['det_con_valor']);
+						}
+						
+		            });
+
 	            });
+
+	            
 			}else{
 				$('#datos_empresa').attr('style', 'display:none');
 			}
@@ -477,56 +578,34 @@ echo $this->formelementerrors ( $con_estado );
 	            	$("#EMP_DIRECCION").val(''+empresa['emp_direccion']);
 	            	$("#EMP_EMAIL").val(''+empresa['emp_email']);
 	            	$("#EMP_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
+
+	            	if($('#sucursal_oculto').val() == null || $('#sucursal_oculto').val() == ''){
+	            	
+		            	$.ajax({
+			                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'telefonoEmpresa')) ?>",
+			                type: "POST",
+			                dataType: "json",
+			                data: "empresa=" + empresa['emp_id'],
+			                beforeSend: function() {
+								//$('#EMP_DIRECCION, #EMP_EMAIL, #EMP_PAGINA_WEB').val('Procesando, espere por favor...');
+			                }
+			            }).done(function(empresa) {
+			            	var i = 0; 
+							for(i=0; i<5; i++){
+								$("#DETALLE_CONTACTO\\["+i+"\\]\\[TIP_TEL_ID\\]").val('1');
+								$("#DETALLE_CONTACTO\\["+i+"\\]\\[DET_CON_VALOR\\]").val('' + empresa['det_con_valor']);
+							}
+							
+			            }); 
+
+	            	}
+	            	
 	            });
 			}else{
 				$('#datos_empresa').attr('style', 'display:none');
 			}
 		});
 
-		$('#SUC_ID').change(function(){
-			if($('#SUC_ID').val() != null && $('#SUC_ID').val() != ''){
-
-				$.ajax({
-	                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'datosEmpresa')) ?>",
-	                type: "POST",
-	                dataType: "json",
-	                data: "empresa=" + $('#SUC_ID').val(),
-	                beforeSend: function() {
-						$('#SUC_DIRECCION, #SUC_EMAIL, #SUC_PAGINA_WEB').val('Procesando, espere por favor...');
-	                }
-	            }).done(function(empresa) {
-		            $('#datos_sucursal').attr('style', 'display:true');
-	            	$("#SUC_DIRECCION").val(''+empresa['emp_direccion']);
-	            	$("#SUC_EMAIL").val(''+empresa['emp_email']);
-	            	$("#SUC_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
-	            });
-			}else{
-				$('#datos_sucursal').attr('style', 'display:none');
-			}
-		});
-
-		$('#SUC_ID').ready(function(){
-			if($('#SUC_ID').val() != null && $('#SUC_ID').val() != ''){
-
-				$.ajax({
-	                url: "<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'datosEmpresa')) ?>",
-	                type: "POST",
-	                dataType: "json",
-	                data: "empresa=" + $('#SUC_ID').val(),
-	                beforeSend: function() {
-						$('#SUC_DIRECCION, #SUC_EMAIL, #SUC_PAGINA_WEB').val('Procesando, espere por favor...');
-	                }
-	            }).done(function(empresa) {
-		            $('#datos_sucursal').attr('style', 'display:true');
-	            	$("#SUC_DIRECCION").val(''+empresa['emp_direccion']);
-	            	$("#SUC_EMAIL").val(''+empresa['emp_email']);
-	            	$("#SUC_PAGINA_WEB").val(''+empresa['emp_pagina_web']);
-	            });
-			}else{
-				$('#datos_sucursal').attr('style', 'display:none');
-			}
-		});
-		
 		//Carga del combo box de Códigos de teléfono de Ciudades
 		$(".det_con_codigo_ciudad").prop("disabled", true);
 
